objects/Contract.object
<CustomObject>
    <fields>
        <fullName>ACV1__c</fullName>
        <label>ACV1</label>
        <summarizedField>Order.ACV__c</summarizedField>
        <summaryForeignKey>Order.ContractId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ACV_New__c</fullName>
        <label>ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACV__c</fullName>
        <label>ACV</label>
        <summarizedField>Order.ACV__c</summarizedField>
        <summaryForeignKey>Order.ContractId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ARR__c</fullName>
        <formula>Opportunity__r.X1st_YR_ARR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1st yr ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Terms__c</fullName>
        <label>Billing Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COA_Status__c</fullName>
        <label>COA Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_ARR__c</fullName>
        <formula>Opportunity__r.Current_ARR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Salesforce_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Org</label>
        <referenceTo>Salesforce_Org__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Since_End_Date__c</fullName>
        <description>This field evaluates the number of days between Today and End Date</description>
        <formula>EndDate - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The indication of how many days left till contract End Date. If the value is greater than 120 days, the renewal quote will be automatically created on renewal opportunity.</inlineHelpText>
        <label>Days Since End Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Premier_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to be activated automatically, as soon as a customer has an active order with Premier Support. Used in CPQ Product Rules, as well as in Add on Calculation</description>
        <inlineHelpText>Checkbox to be activated automatically, as soon as a customer has an active order with Premier Support. Used in CPQ Product Rules, as well as in Add on Calculation</inlineHelpText>
        <label>Has Premier Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_Standard_ACV__c</fullName>
        <label>Non Standard ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_licenses__c</fullName>
        <label>Number of licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_1st_yr_ARR__c</fullName>
        <label>Order 1st yr ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_ACV__c</fullName>
        <label>Order ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Current_ARR__c</fullName>
        <label>Order Current ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PS_Is_Entitlement_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Entitlement Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Child_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_method__c</fullName>
        <label>Payment method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BACS/Bank transfer</fullName>
                </value>
                <value>
                    <fullName>Direct debit</fullName>
                </value>
                <value>
                    <fullName>Credit card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contracts (Previous Contract)</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Id__c</fullName>
        <formula>Opportunity__r.SBQQ__PrimaryQuote__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Feedback__c</fullName>
        <label>Renewal Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Renewal requested</fullName>
                </value>
                <value>
                    <fullName>Cancellation requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts (Renewal Opportunity)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Process_Start_Date__c</fullName>
        <description>Date when the renewal process should start</description>
        <formula>EndDate - 90</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date when the renewal process should start</inlineHelpText>
        <label>Renewal Process Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__ActiveContract__c</fullName>
        <description>Determines if this contract is in effect.</description>
        <formula>IF(AND(ISPICKVAL(StatusCode,&apos;Activated&apos;), OR(AND(Not(SBQQ__Evergreen__c), EndDate &gt;= TODAY()), SBQQ__Evergreen__c)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines if this contract is in effect.</inlineHelpText>
        <label>Active Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOpportunityRecordTypeId__c</fullName>
        <description>Record Type of the Amendment Opportunity, unless otherwise specified.</description>
        <inlineHelpText>Record Type of the Amendment Opportunity, unless otherwise specified.</inlineHelpText>
        <label>Amendment Opportunity Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOpportunityStage__c</fullName>
        <description>The current stage of the Amendment Opportunity.</description>
        <inlineHelpText>The current stage of the Amendment Opportunity.</inlineHelpText>
        <label>Amendment Opportunity Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the original opportunity.</description>
        <inlineHelpText>Owner of the original opportunity.</inlineHelpText>
        <label>Amendment Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AmendmentContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentPricebookId__c</fullName>
        <description>Price Book Id of your Amendment.</description>
        <inlineHelpText>Price Book Id of your Amendment.</inlineHelpText>
        <label>Amendment Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentRenewalBehavior__c</fullName>
        <description>The basis for which a Renewal Start Date and Amendment End Date are calculated.</description>
        <inlineHelpText>The basis for which a Renewal Start Date and Amendment End Date are calculated.</inlineHelpText>
        <label>Amendment &amp; Renewal Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Latest End Date</fullName>
                    <default>true</default>
                    <label>Latest End Date</label>
                </value>
                <value>
                    <fullName>Earliest End Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentStartDate__c</fullName>
        <description>Start Date of your Amendment. If blank, Amendment will start on today&apos;s date.</description>
        <inlineHelpText>Start Date of your Amendment. If blank, Amendment will start on today&apos;s date.</inlineHelpText>
        <label>Amendment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultRenewalContactRoles__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to include contact roles from the original opportunity in the renewal opportunity.</description>
        <inlineHelpText>Select to include contact roles from the original opportunity in the renewal opportunity.</inlineHelpText>
        <label>Default Renewal Contact Roles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultRenewalPartners__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to include the original opportunity partners in renewal opportunity.</description>
        <inlineHelpText>Select to include the original opportunity partners in renewal opportunity.</inlineHelpText>
        <label>Default Renewal Partners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DisableAmendmentCoTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If unchecked, the Amendment Quote End Date will be set according to the Amendment &amp; Renewal Behavior setting. If checked, then no End Date will be set.</description>
        <inlineHelpText>If unchecked, the Amendment Quote End Date will be set according to the Amendment &amp; Renewal Behavior setting. If checked, then no End Date will be set.</inlineHelpText>
        <label>Disable Amendment Co-Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Evergreen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the contract is evergreen.</description>
        <inlineHelpText>Indicates whether the contract is evergreen.</inlineHelpText>
        <label>Evergreen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExpirationDate__c</fullName>
        <description>Contract end date for use in time-based workflows.</description>
        <formula>EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract end date for use in time-based workflows.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__MDQRenewalBehavior__c</fullName>
        <description>Defines how segmented subscription products will appear on renewal quotes. De-Segmented will renew as a standard quote line with the last segment’s data.</description>
        <inlineHelpText>Defines how segmented subscription products will appear on renewal quotes. De-Segmented will renew as a standard quote line with the last segment&apos;s data.</inlineHelpText>
        <label>MDQ Renewal Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>De-segmented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__MasterContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to designate this contract as the master contract for this account. Upon renewal, all contracts will be rolled into this one.</description>
        <inlineHelpText>Select to designate this contract as the master contract for this account. Upon renewal, all contracts will be rolled into this one.</inlineHelpText>
        <label>Master Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OpportunityPricebookId__c</fullName>
        <description>Price Book ID of the related opportunity or quote.</description>
        <formula>IF(NOT(ISBLANK(SBQQ__Opportunity__c)), SBQQ__Opportunity__r.Pricebook2Id, SBQQ__Quote__r.SBQQ__PricebookId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ID of the Price Book used from the original Opportunity.</inlineHelpText>
        <label>Opportunity or Quote Price Book ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Opportunity from which this Contract was created.</description>
        <inlineHelpText>The Opportunity from which this Contract was created.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundleStructureUponRenewals__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes.</description>
        <inlineHelpText>Select checkbox to maintain bundle hierarchy on renewal quotes.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote from which this Contract was created.</description>
        <inlineHelpText>Quote from which this Contract was created.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalForecast__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to trigger the generation of a renewal opportunity for forecasting purposes. Does not automatically generate a renewal quote.</description>
        <inlineHelpText>Select to trigger the generation of a renewal opportunity for forecasting purposes. Does not automatically generate a renewal quote.</inlineHelpText>
        <label>Renewal Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunityRecordTypeId__c</fullName>
        <description>Record type of renewal opportunity if different from the default.</description>
        <inlineHelpText>Record type of renewal opportunity if different from the default.</inlineHelpText>
        <label>Renewal Opportunity Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunityStage__c</fullName>
        <description>Override the default opportunity stage for this renewal. This must be done prior to selecting Renewal Forecast to take effect on the renewal opportunity.</description>
        <inlineHelpText>Override the default opportunity stage for this renewal. This must be done prior to selecting Renewal Forecast to take effect on the renewal opportunity.</inlineHelpText>
        <label>Renewal Opportunity Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Renewal opportunity generated to track the renewal of this contract.</description>
        <inlineHelpText>Renewal opportunity generated to track the renewal of this contract.</inlineHelpText>
        <label>Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewal Contracts</relationshipLabel>
        <relationshipName>RenewedContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the original opportunity.</description>
        <inlineHelpText>Owner of the original opportunity.</inlineHelpText>
        <label>Renewal Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RenewalContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricebookId__c</fullName>
        <description>Specify a price book ID to be used on Renewal Opportunities if you do not want to use the price book ID of the original opportunity.</description>
        <inlineHelpText>Specify a price book ID to be used on Renewal Opportunities if you do not want to use the price book ID of the original opportunity.</inlineHelpText>
        <label>Renewal Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalQuoted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this option to automatically generate a renewal quote on renewal opportunities.</description>
        <inlineHelpText>Select this option to automatically generate a renewal quote on renewal opportunities.</inlineHelpText>
        <label>Renewal Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalTerm__c</fullName>
        <description>Specify the term of the renewal. By default, it matches the original contract term.</description>
        <inlineHelpText>Specify the term of the renewal. By default, it matches the original contract term.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to combine quantities of Subscriptions for the same product into one line on Renewal Quotes and Amendments.</description>
        <inlineHelpText>Select to combine quantities of Subscriptions for the same product into one line on Renewal Quotes and Amendments.</inlineHelpText>
        <label>Combine Subscription Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Contract_Number__c</fullName>
        <inlineHelpText>This is the contract number that we receive from SFDC for this contract submission.</inlineHelpText>
        <label>SFDC Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The org to which the contract is applied.</inlineHelpText>
        <label>Salesforce Org</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts (for Salesforce Org)</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TCV1__c</fullName>
        <label>TCV1</label>
        <summarizedField>Order.TCV__c</summarizedField>
        <summaryForeignKey>Order.ContractId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TCV_New__c</fullName>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <label>TCV</label>
        <summarizedField>Order.TCV__c</summarizedField>
        <summaryForeignKey>Order.ContractId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Term_ACV__c</fullName>
        <formula>(  TCV__c / (ContractTerm /12))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_price__c</fullName>
        <label>Unit price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kuga_sub__AnnualRecurringRevenueForecast__c</fullName>
        <description>Calculation of the Annual Recurring Revenue forecasted based on the Monthly Recurring Revenue. Calculation is normalized to 12  Month multiplication of Monthly Recurring Revenue and may differ from Annual Recurring Revenue (Committed).

Function requires Kugamon Subscription Active Check Subscription Automation in Kugamon Settings to be activated.</description>
        <formula>kuga_sub__MonthlyRecurringRevenue__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Forecast of Annual Recurring Revenue based on Monthly Recurring Revenue.</inlineHelpText>
        <label>Annual Recurring Revenue (Forecast)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kuga_sub__AnnualRecurringRevenue__c</fullName>
        <description>Sums up Annual  Recurring Revenue field for all related Active Subscription records. Includes values of Subscriptions with Term 12 months or less. If Subscription Term is greater than 12 months, only 12 months is calculated.

Function requires Kugamon Subscription Active Check Subscription Automation in Kugamon Settings to be activated.</description>
        <inlineHelpText>Summation of Subscription Annual Recurring Revenue values. Includes values of Subscriptions with Term 12 months or less. If Subscription Term is greater than 12 months, only 12 months is calculated.</inlineHelpText>
        <label>Annual Recurring Revenue (Committed)</label>
        <summarizedField>kuga_sub__Subscription__c.kuga_sub__ARR__c</summarizedField>
        <summaryFilterItems>
            <field>kuga_sub__Subscription__c.kuga_sub__IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>kuga_sub__Subscription__c.kuga_sub__ContractNumber__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kuga_sub__AutoEmailRenewalNotice__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If Checked, the Contract Renewal Notice Email will be sent on Contract Renewal Notice Date.

The Email Template used is set in the Contract Renewal Email Template Name field in Kugamon Settings. Function requires Kugamon Contract Renewal Notice Email Subscription Automation in Kugamon Settings to be activated.</description>
        <label>Auto Email Renewal Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kuga_sub__AutoEmailRenewalOrder__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Set the value to the Auto Email Renewal Order checkbox field on the Current Renewal Opportunity. Changes made to the checkbox will update the Current Renewal Opportunity.

The Email Template used is set in the Renewal Order Email Template Name field in Kugamon Settings. Function requires Kugamon Renewal Order Generation Subscription Automation in Kugamon Settings to be activated.</description>
        <inlineHelpText>This field updates Current Renewal Opportunity Auto Email Renewal Order field</inlineHelpText>
        <label>Auto Email Renewal Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kuga_sub__ContactBuying__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the Contact Buying of the last Order used to create or update the Contract record.</description>
        <label>Contact Buying</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kuga_sub__ContractRenewalNoticeDate__c</fullName>
        <description>Date when Contract Renewal Notice Email is sent to Contact Buying.

This field is set from the Contract Renewal Notice Days Before Sent field in Kugamon Settings. Function requires Kugamon Contract Renewal Notice Email Subscription Automation in Kugamon Settings to be activated.</description>
        <formula>IF(AND(kuga_sub__AutoEmailRenewalNotice__c = True, kuga_sub__Effective__c = True), EndDate - $Setup.kuga_sub__SubscriptionSetting__c.kuga_sub__ContractRenewalNoticeDaysBeforeSent__c,kuga_sub__LastRenewalNoticeSentDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Dependent on if Auto Email Renewal Notice = True and Effective = True</inlineHelpText>
        <label>Contract Renewal Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kuga_sub__Effective__c</fullName>
        <description>Contract is Live and in Effect when the field is Checked due to the following two conditions: 

(1) Contract Status is Activated
(2) Contracts Dates are Blank or Today is within Start Date and End Date</description>
        <formula>AND( 
TEXT(Status) = &apos;Activated&apos; ,

OR ( 
AND(ISBLANK( StartDate ), ISBLANK(EndDate)), 
AND(StartDate &lt;= Today(), EndDate &gt;= Today()) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kuga_sub__Expanded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that at least one of the Contributing Orders has the Record Type of Expansion.</description>
        <inlineHelpText>If one or more contributing Orders = Expansion, this should be set to true.</inlineHelpText>
        <label>Expanded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kuga_sub__LastRenewalNoticeSentDate__c</fullName>
        <description>Date of Last Renewal Notice Sent.

Function requires Kugamon Contract Renewal Notice Email Subscription Automation in Kugamon Settings to be activated.</description>
        <label>Last Renewal Notice Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kuga_sub__MonthlyRecurringRevenue__c</fullName>
        <description>Sums up Monthly Recurring Revenue field for all related Active Subscription records.</description>
        <label>Monthly Recurring Revenue</label>
        <summarizedField>kuga_sub__Subscription__c.kuga_sub__MRR__c</summarizedField>
        <summaryFilterItems>
            <field>kuga_sub__Subscription__c.kuga_sub__IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>kuga_sub__Subscription__c.kuga_sub__ContractNumber__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kuga_sub__Pricebook2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Price Book assigned to the Contract.</description>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kuga_sub__RenewalOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Renewal Opportunity for the next Contract period.</description>
        <label>Current Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Parent Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kuga_sub__RenewalTerm__c</fullName>
        <description>Renewal Term in Months for the Current Renewal Opportunity. 

Changes made to Renewal Term will update Service Term of the related Current Renewal Opportunity&apos;s Opportunity Products with Line Terms greater than or equal to 1 Month.</description>
        <label>Renewal Term (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kuga_sub__SendRenewalNoticeToday__c</fullName>
        <description>System field for the Automated Contract Renewal Notification Email functionality.

Function requires Kugamon Contract Renewal Notice Email Subscription Automation in Kugamon Settings to be activated.</description>
        <formula>AND(kuga_sub__AutoEmailRenewalNotice__c = True, 
kuga_sub__Effective__c = True, 
kuga_sub__ContractRenewalNoticeDate__c  &lt;= Today(),

 OR(kuga_sub__LastRenewalNoticeSentDate__c &lt;  kuga_sub__ContractRenewalNoticeDate__c, ISBLANK(kuga_sub__LastRenewalNoticeSentDate__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Renewal Notice Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kuga_sub__SubscriptionEndDate__c</fullName>
        <description>The latest End Date of all the related Subscriptions.</description>
        <label>Subscription End Date</label>
        <summarizedField>kuga_sub__Subscription__c.kuga_sub__EndDate__c</summarizedField>
        <summaryForeignKey>kuga_sub__Subscription__c.kuga_sub__ContractNumber__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kuga_sub__SubscriptionStartDate__c</fullName>
        <description>The earliest Start Date of all the related Subscriptions.</description>
        <label>Subscription Start Date</label>
        <summarizedField>kuga_sub__Subscription__c.kuga_sub__StartDate__c</summarizedField>
        <summaryForeignKey>kuga_sub__Subscription__c.kuga_sub__ContractNumber__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kuga_sub__TotalSubscriptionAmount__c</fullName>
        <description>Total sum of the Net Amount of all the Subscription records associated with the related Contract.</description>
        <label>Total Subscription Amount</label>
        <summarizedField>kuga_sub__Subscription__c.kuga_sub__NetAmount__c</summarizedField>
        <summaryForeignKey>kuga_sub__Subscription__c.kuga_sub__ContractNumber__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>